--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -56,6 +56,9 @@ dolphinscheduler:
   data_dir: '{{ data_home }}/dolphinscheduler'
   port: 32345
 
+ntp:
+  server: 54.11.0.65
+
 superset:
   home_dir: '{{ app_home }}/superset'
   data_dir: '{{ data_home }}/superset'
