mysql57: 修改安装时的语法错误

--- a/ansible/roles/mysql57/tasks/main.yml
+++ b/ansible/roles/mysql57/tasks/main.yml
@@ -2,8 +2,8 @@
   yum:
     name: mysql-community-server
     state: installed
-    disablerep: '*'
-    enablerep: mysql57
+    disablerepo: '*'
+    enablerepo: mysql57
 
 - name: Change data dir owner
   file:
