mysql8: 安装时指定 repo 名称

--- a/ansible/roles/mysql8/tasks/main.yml
+++ b/ansible/roles/mysql8/tasks/main.yml
@@ -6,6 +6,7 @@
 - name: Install mysql 8.0
   yum:
     name: mysql-community-server
+    disablerepo: '*'
     enablerepo: mysql8
     state: present
 
